--- a/01-Android/app/src/main/res/layout/activity_main.xml
+++ b/01-Android/app/src/main/res/layout/activity_main.xml
@@ -29,4 +29,13 @@
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView" />
 
+    <Button
+        android:id="@+id/btn_ir_list_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="List View"
+        app:layout_constraintEnd_toEndOf="@+id/btn_ciclo_vida"
+        app:layout_constraintStart_toStartOf="@+id/btn_ciclo_vida"
+        tools:layout_editor_absoluteY="143dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
