--- a/01-Android/app/src/main/res/values-land/string.xml
+++ b/01-Android/app/src/main/res/values-land/string.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="bienvenida">Bienvenida LAND</string>
+    <color name="color_fondo">#000000</color>
 </resources>
