--- a/Examenes/Examen_IB/app/src/main/res/layout/activity_crear_panaderia.xml
+++ b/Examenes/Examen_IB/app/src/main/res/layout/activity_crear_panaderia.xml
@@ -11,8 +11,8 @@
         android:layout_width="376dp"
         android:layout_height="47dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.742"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView7"
         tools:layout_editor_absoluteY="456dp">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -26,9 +26,9 @@
         android:layout_width="376dp"
         android:layout_height="47dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.742"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="375dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView6"
+        tools:layout_editor_absoluteY="374dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtIn_arriendoPanaderia_crear"
@@ -41,9 +41,9 @@
         android:layout_width="376dp"
         android:layout_height="47dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.685"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="206dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        tools:layout_editor_absoluteY="205dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtIn_ubicacionPanaderia_crear"
@@ -58,8 +58,8 @@
         android:text="Año de fundación:"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.087"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -70,8 +70,8 @@
         android:text="Arriendo:"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.073"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -82,8 +82,8 @@
         android:text="Es cafeteria:"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.078"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout5"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -94,8 +94,8 @@
         android:text="Ubicación:"
         app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.075"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.006"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -134,8 +134,8 @@
         android:backgroundTint="#279746"
         android:text="CREAR"
         app:layout_constraintBottom_toTopOf="@+id/btn_cancelar_crear"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
+        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
         app:layout_constraintVertical_bias="1.0" />
 
@@ -147,17 +147,19 @@
         android:text="CANCELAR"
         android:textColorHighlight="#BC1818"
         android:textColorLink="#DF0D0D"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="620dp" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_crearPanaderia"
+        app:layout_constraintHorizontal_bias="0.357"
+        app:layout_constraintStart_toStartOf="@+id/btn_crearPanaderia"
+        tools:layout_editor_absoluteY="621dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2"
         android:layout_width="372dp"
         android:layout_height="48dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="114dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        tools:layout_editor_absoluteY="113dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtIn_nombrePanaderia_crear"
@@ -170,9 +172,9 @@
         android:layout_width="376dp"
         android:layout_height="47dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.685"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="292dp">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        tools:layout_editor_absoluteY="291dp">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtIn_esCafeteriaPanaderia_crear"
