--- a/Deberes/Deber03 - Voicemod/app/src/main/res/layout/menu_layout.xml
+++ b/Deberes/Deber03 - Voicemod/app/src/main/res/layout/menu_layout.xml
@@ -7,7 +7,7 @@
     tools:context=".MenuLayoutActivity">
     <!-- layout_menu.xml -->
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@android:color/darker_gray">
