--- a/Deberes/Deber03 - Voicemod/app/src/main/res/layout/activity_configuracion.xml
+++ b/Deberes/Deber03 - Voicemod/app/src/main/res/layout/activity_configuracion.xml
@@ -39,18 +39,12 @@
         app:srcCompat="@drawable/logo" />
 
     <LinearLayout
-        android:layout_width="412dp"
-        android:layout_height="322dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:layout_editor_absoluteX="-1dp">
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="match_parent"
-            android:layout_height="0.5dp"
-            android:background="@android:color/white" />
 
         <TextView
             android:id="@+id/removeItem2"
