--- a/Deberes/Deber03 - Voicemod/app/src/main/res/layout/activity_main.xml
+++ b/Deberes/Deber03 - Voicemod/app/src/main/res/layout/activity_main.xml
@@ -9,13 +9,12 @@
 
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="96dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="48dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
+        android:id="@+id/clean"
+        android:layout_width="80dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/clean"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
@@ -25,7 +24,7 @@
         android:layout_height="22dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
-        android:background="@drawable/configuracion"
+        android:background="@drawable/settings"
         android:backgroundTint="#FFFFFF"
         android:drawableTint="#FFFFFF"
         android:shadowColor="#FFFFFF"
@@ -49,5 +48,25 @@
         app:layout_constraintStart_toEndOf="@+id/Settings"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
+
+    <Button
+        android:id="@+id/anadir"
+        android:layout_width="82dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="36dp"
+        android:background="@drawable/nuevo"
+        app:layout_constraintStart_toEndOf="@+id/clean"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clean"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/clean"
+        app:layout_constraintStart_toStartOf="@+id/clean"
+        tools:layout_editor_absoluteY="173dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
