--- a/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_home.xml
+++ b/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_home.xml
@@ -7,38 +7,41 @@
     android:background="@drawable/backgroundsimpleday"
     tools:context=".fragments.HomeFragment">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="417dp"
-        android:layout_height="129dp"
-        android:layout_marginTop="4dp"
-        android:src="@drawable/simpledaybanner"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <ImageView
         android:id="@+id/addTaskBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_baseline_add_"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:srcCompat="@drawable/ic_add_with_background"
+        tools:layout_editor_absoluteY="655dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mainRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="42dp"
+        android:layout_width="426dp"
+        android:layout_height="562dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/addTaskBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.067" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="425dp"
+        android:layout_height="73dp"
+        android:background="#2E2E2E"
+        android:text="SIMPLE DAY"
+        android:textAlignment="center"
+        android:textColor="#FF9800"
+        android:textSize="50sp"
+        android:textStyle="normal|bold|italic"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
