--- a/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_home.xml
+++ b/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_home.xml
@@ -12,26 +12,27 @@
         android:id="@+id/addTaskBtn"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="24dp"
+        android:background="#FFFFFF"
         android:src="@drawable/ic_baseline_add_"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_add_with_background"
-        tools:layout_editor_absoluteY="655dp" />
+        app:srcCompat="@drawable/ic_add_with_background" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mainRecyclerView"
         android:layout_width="426dp"
         android:layout_height="562dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.067" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="425dp"
+        android:layout_width="match_parent"
         android:layout_height="73dp"
         android:background="#2E2E2E"
         android:text="SIMPLE DAY"
