--- a/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_sign_up.xml
+++ b/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/fragment_sign_up.xml
@@ -152,7 +152,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginTop="60dp"
         android:fontFamily="@font/inter_regular"
-        android:text="Ya estas registrado?"
+        android:text="¿Ya estas registrado?"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -165,7 +165,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/inter_regular"
         android:text="Ingresar"
-        android:textColor="#FF9800"
+        android:textColor="#00BCD4"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/textview32"
         app:layout_constraintStart_toEndOf="@+id/textview32"
