--- a/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/each_todo_item.xml
+++ b/Proyecto - Simple Day/SimpleDayAndroidApp_v2/SimpleDay/app/src/main/res/layout/each_todo_item.xml
@@ -19,7 +19,7 @@
             android:fontFamily="@font/inter_extra_bold"
             android:paddingStart="16dp"
             android:text="Item 1"
-            android:textColor="@color/text_color"
+            android:textColor="@color/black"
             android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
